--- a/articles/azure-monitor/index.yml
+++ b/articles/azure-monitor/index.yml
@@ -1,15 +1,9 @@
 ### YamlMime:YamlDocument
-ms.openlocfilehash: d0fbabdae9b560a882bd4681eb9e681fd2a0398a
-ms.sourcegitcommit: eecd816953c55df1671ffcf716cf975ba1b12e6b
-ms.translationtype: HT
-ms.contentlocale: sv-SE
-ms.lasthandoff: 01/28/2019
-ms.locfileid: "55101778"
 documentType: LandingData
 title: Dokumentation om Azure Monitor
 metadata:
   title: Dokumentation för Azure Monitor | Microsoft Docs
-  description: Azure Monitor, vilket nu innefattar Log Analytics och Application Insights, innehåller avancerade verktyg för att samla in och analysera telemetri som gör det möjligt att maximera prestanda och tillgänglighet för dina molnresurser och lokala resurser och program.
+  description: 'Azure Monitor, vilket nu innefattar Log Analytics och Application Insights, innehåller avancerade verktyg för att samla in och analysera telemetri som gör det möjligt att maximera prestanda och tillgänglighet för dina molnresurser och lokala resurser och program.'
   services: azure-monitor
   author: bwren
   manager: carmonm
@@ -19,126 +13,126 @@ metadata:
   ms.date: 01/25/2019
   ms.author: bwren
 abstract:
-  description: Azure Monitor, vilket nu innefattar Log Analytics och Application Insights, innehåller avancerade verktyg för att samla in och analysera telemetri som gör det möjligt att maximera prestanda och tillgänglighet för dina molnresurser och lokala resurser och program. Det hjälper dig att förstå hur dina program fungerar och identifierar proaktivt problem som påverkar dem och de resurser som de förlitar sig på.
+  description: 'Azure Monitor, vilket nu innefattar Log Analytics och Application Insights, innehåller avancerade verktyg för att samla in och analysera telemetri som gör det möjligt att maximera prestanda och tillgänglighet för dina molnresurser och lokala resurser och program. Det hjälper dig att förstå hur dina program fungerar och identifierar proaktivt problem som påverkar dem och de resurser som de förlitar sig på.'
 sections:
-- title: Föreslaget innehåll
-  items:
-  - type: paragraph
-    text: Med följande länkar får du en lista med förslag över innehåll för Log Analytics och Application Insights.
-  - type: list
-    style: unordered
-    className: spaced noBullet
+  - title: Föreslaget innehåll
     items:
-    - html: <a href="/azure/azure-monitor/azure-monitor-log-hub">Log Analytics</a>
-    - html: <a href="/azure/azure-monitor/azure-monitor-app-hub">Application Insights</a>
-- title: Snabbstarter på 5 minuter
-  items:
-  - type: paragraph
-    text: Lär dig mer om att samla in och analysera mått och loggar som samlats in från Azure-resurser.
-  - type: list
-    style: icon48
+      - type: paragraph
+        text: Med följande länkar får du en lista med förslag över innehåll för Log Analytics och Application Insights.
+      - type: list
+        style: unordered
+        className: spaced noBullet
+        items:
+          - html: <a href="/azure/azure-monitor/azure-monitor-log-hub">Log Analytics</a>
+          - html: <a href="/azure/azure-monitor/azure-monitor-app-hub">Application Insights</a>
+  - title: Snabbstarter på 5 minuter
     items:
-    - image:
-        src: https://docs.microsoft.com/media/common/Chart.svg
-      text: Övervaka mått
-      href: /azure/monitoring-and-diagnostics/monitor-quick-resource-metric-alert-portal
-    - image:
-        src: /azure/azure-monitor/media/index/log-analytics.svg
-      text: Analysloggar
-      href: /azure/log-analytics/query-language/get-started-analytics-portal
-    - image:
-        src: https://docs.microsoft.com/azure/media/index/virtualmachine.svg
-      text: Virtuella Azure-datorer
-      href: /azure/log-analytics/log-analytics-quick-collect-azurevm
-    - image:
-        src: https://docs.microsoft.com/media/logos/logo_linux.svg
-      text: Linux-dator
-      href: /azure/log-analytics/log-analytics-quick-collect-linux-computer
-    - image:
-        src: https://docs.microsoft.com/media/logos/logo_Windows.svg
-      text: Windows-dator
-      href: /azure/log-analytics/log-analytics-quick-collect-windows-computer
-    - image:
-        src: https://docs.microsoft.com/media/common/i_alert.svg
-      text: Granskning och aviseringar för prenumeration
-      href: /azure/monitoring-and-diagnostics/monitor-quick-audit-notify-action-in-subscription
-  - type: paragraph
-    text: Lär dig att övervaka ditt program med Azure Monitor Application Insights.
-  - type: list
-    style: icon48
+      - type: paragraph
+        text: Lär dig mer om att samla in och analysera mått och loggar som samlats in från Azure-resurser.
+      - type: list
+        style: icon48
+        items:
+          - image:
+              src: 'https://docs.microsoft.com/media/common/Chart.svg'
+            text: Övervaka mått
+            href: /azure/monitoring-and-diagnostics/monitor-quick-resource-metric-alert-portal
+          - image:
+              src: /azure/azure-monitor/media/index/log-analytics.svg
+            text: Analysloggar
+            href: /azure/log-analytics/query-language/get-started-analytics-portal
+          - image:
+              src: 'https://docs.microsoft.com/azure/media/index/virtualmachine.svg'
+            text: Virtuella Azure-datorer
+            href: /azure/log-analytics/log-analytics-quick-collect-azurevm
+          - image:
+              src: 'https://docs.microsoft.com/media/logos/logo_linux.svg'
+            text: Linux-dator
+            href: /azure/log-analytics/log-analytics-quick-collect-linux-computer
+          - image:
+              src: 'https://docs.microsoft.com/media/logos/logo_Windows.svg'
+            text: Windows-dator
+            href: /azure/log-analytics/log-analytics-quick-collect-windows-computer
+          - image:
+              src: 'https://docs.microsoft.com/media/common/i_alert.svg'
+            text: Granskning och aviseringar för prenumeration
+            href: /azure/monitoring-and-diagnostics/monitor-quick-audit-notify-action-in-subscription
+      - type: paragraph
+        text: Lär dig att övervaka ditt program med Azure Monitor Application Insights.
+      - type: list
+        style: icon48
+        items:
+          - image:
+              src: 'https://docs.microsoft.com/media/common/dotnet.svg'
+            text: .NET
+            href: /azure/application-insights/quick-monitor-portal
+          - image:
+              src: 'https://docs.microsoft.com/media/logos/logo_NETcore.svg'
+            text: .NET Core
+            href: /azure/application-insights/app-insights-dotnetcore-quick-start
+          - image:
+              src: 'https://docs.microsoft.com/media/common/nodejs.svg'
+            text: Node.js
+            href: /azure/application-insights/app-insights-nodejs-quick-start
+          - image:
+              src: 'https://docs.microsoft.com/media/common/java.svg'
+            text: Java
+            href: /azure/application-insights/app-insights-java-quick-start
+          - image:
+              src: /azure/application-insights/media/index/mobile-center.png
+            text: Mobil
+            href: /azure/application-insights/app-insights-mobile-center-quickstart
+          - image:
+              src: 'https://docs.microsoft.com/media/common/i_web-color.svg'
+            text: Webbplats
+            href: /azure/application-insights/app-insights-website-monitoring
+  - title: Stegvisa självstudier
     items:
-    - image:
-        src: https://docs.microsoft.com/media/common/dotnet.svg
-      text: .NET
-      href: /azure/application-insights/quick-monitor-portal
-    - image:
-        src: https://docs.microsoft.com/media/logos/logo_NETcore.svg
-      text: .NET Core
-      href: /azure/application-insights/app-insights-dotnetcore-quick-start
-    - image:
-        src: https://docs.microsoft.com/media/common/nodejs.svg
-      text: Node.js
-      href: /azure/application-insights/app-insights-nodejs-quick-start
-    - image:
-        src: https://docs.microsoft.com/media/common/java.svg
-      text: Java
-      href: /azure/application-insights/app-insights-java-quick-start
-    - image:
-        src: /azure/application-insights/media/index/mobile-center.png
-      text: Mobil
-      href: /azure/application-insights/app-insights-mobile-center-quickstart
-    - image:
-        src: https://docs.microsoft.com/media/common/i_web-color.svg
-      text: Webbplats
-      href: /azure/application-insights/app-insights-website-monitoring
-- title: Stegvisa självstudier
-  items:
-  - type: paragraph
-    text: Lär dig att analysera, visualisera och hantera insamlade data.
-  - type: list
-    style: ordered
+      - type: paragraph
+        text: 'Lär dig att analysera, visualisera och hantera insamlade data.'
+      - type: list
+        style: ordered
+        items:
+          - html: <a href="/azure/log-analytics/log-analytics-tutorial-viewdata">Visa och analysera data som samlats in</a>
+          - html: <a href="/azure/log-analytics/log-analytics-tutorial-dashboards">Skapa och dela instrumentpaneler</a>
+          - html: <a href="/azure/monitoring-and-diagnostics/monitor-tutorial-autoscale-performance-schedule">Autoskala baserat på schema eller programprestanda</a>
+          - html: <a href="/azure/monitoring-and-diagnostics/monitor-tutorial-archive-monitoring-data">Arkivera övervakningsdata</a>
+      - type: paragraph
+        text: Lär dig mer om att kontinuerligt förbättra prestanda och användning av dina webbappar.
+      - type: list
+        style: ordered
+        items:
+          - html: <a href="/azure/application-insights/app-insights-tutorial-runtime-exceptions">Hitta och diagnostisera körningsundantag</a>
+          - html: <a href="/azure/application-insights/app-insights-tutorial-performance">Hitta och diagnostisera prestandaproblem</a>
+          - html: <a href="/azure/application-insights/app-insights-tutorial-alert">Övervakning och aviseringar om programmets hälsotillstånd</a>
+          - html: <a href="/azure/application-insights/app-insights-tutorial-users">Analysera kundens användning och information</a>
+          - html: <a href="/azure/application-insights/app-insights-tutorial-dashboards">Skapa anpassade KPI-instrumentpaneler</a>
+  - title: Kostnadsfri videoutbildning för Pluralsight
     items:
-    - html: <a href="/azure/log-analytics/log-analytics-tutorial-viewdata">Visa och analysera data som samlats in</a>
-    - html: <a href="/azure/log-analytics/log-analytics-tutorial-dashboards">Skapa och dela instrumentpaneler</a>
-    - html: <a href="/azure/monitoring-and-diagnostics/monitor-tutorial-autoscale-performance-schedule">Autoskala baserat på schema eller programprestanda</a>
-    - html: <a href="/azure/monitoring-and-diagnostics/monitor-tutorial-archive-monitoring-data">Arkivera övervakningsdata</a>
-  - type: paragraph
-    text: Lär dig mer om att kontinuerligt förbättra prestanda och användning av dina webbappar.
-  - type: list
-    style: ordered
+      - type: list
+        style: cards
+        className: cardsFTitle
+        items:
+          - title: Azure-administratör
+            href: 'https://go.microsoft.com/fwlink/?linkid=2012827'
+            image:
+              src: 'https://docs.microsoft.com/media/logos/logo_pluralsight.svg'
+              href: 'https://go.microsoft.com/fwlink/?linkid=2012827'
+  - title: Exempel
     items:
-    - html: <a href="/azure/application-insights/app-insights-tutorial-runtime-exceptions">Hitta och diagnostisera körningsundantag</a>
-    - html: <a href="/azure/application-insights/app-insights-tutorial-performance">Hitta och diagnostisera prestandaproblem</a>
-    - html: <a href="/azure/application-insights/app-insights-tutorial-alert">Övervakning och aviseringar om programmets hälsotillstånd</a>
-    - html: <a href="/azure/application-insights/app-insights-tutorial-users">Analysera kundens användning och information</a>
-    - html: <a href="/azure/application-insights/app-insights-tutorial-dashboards">Skapa anpassade KPI-instrumentpaneler</a>
-- title: Kostnadsfri videoutbildning för Pluralsight
-  items:
-  - type: list
-    style: cards
-    className: cardsFTitle
+      - type: paragraph
+        text: Använd följande exempel för att konfigurera och hantera Log Analytics.
+      - type: list
+        style: unordered
+        className: spaced noBullet
+        items:
+          - html: <a href="/azure/log-analytics/powershell-samples">Azure PowerShell</a>
+  - title: Referens
     items:
-    - title: Azure-administratör
-      href: https://go.microsoft.com/fwlink/?linkid=2012827
-      image:
-        src: https://docs.microsoft.com/media/logos/logo_pluralsight.svg
-        href: https://go.microsoft.com/fwlink/?linkid=2012827
-- title: Exempel
-  items:
-  - type: paragraph
-    text: Använd följande exempel för att konfigurera och hantera Log Analytics.
-  - type: list
-    style: unordered
-    className: spaced noBullet
-    items:
-    - html: <a href="/azure/log-analytics/powershell-samples">Azure PowerShell</a>
-- title: Referens
-  items:
-  - type: list
-    style: cards
-    className: cardsD
-    items:
-    - title: Kommandorad
-      html: <p><a href="/powershell/module/azurerm.operationalinsights">Azure PowerShell</a></p>
-    - title: REST
-      html: <p><a href="/rest/api/loganalytics">REST API-referens</a></p>
+      - type: list
+        style: cards
+        className: cardsD
+        items:
+          - title: Kommandorad
+            html: <p><a href="/powershell/module/az.operationalinsights">Azure PowerShell</a></p>
+          - title: REST
+            html: <p><a href="/rest/api/loganalytics">REST API-referens</a></p>
