--- a/articles/container-registry/index.yml
+++ b/articles/container-registry/index.yml
@@ -1,15 +1,9 @@
 ### YamlMime:YamlDocument
-ms.openlocfilehash: f18334996e82d83046fa663af08d69dee21a3127
-ms.sourcegitcommit: 4ecc62198f299fc215c49e38bca81f7eb62cdef3
-ms.translationtype: HT
-ms.contentlocale: sv-SE
-ms.lasthandoff: 09/24/2018
-ms.locfileid: "47039606"
 documentType: LandingData
 title: Azure Container Registry-dokumentation
 metadata:
   title: Dokumentation om Azure Container Registry – självstudier | Microsoft Docs
-  description: Med Azure Container Registry kan du skapa, lagra och hantera avbildningar av alla typer av behållardistributioner. Lär dig hur du använder Azure Container Registry med de här snabbstarterna, självstudierna och exemplen.
+  description: 'Med Azure Container Registry kan du skapa, lagra och hantera avbildningar av alla typer av behållardistributioner. Lär dig hur du använder Azure Container Registry med de här snabbstarterna, självstudierna och exemplen.'
   services: container-registry
   author: czeumault
   manager: carolz
@@ -20,62 +14,62 @@ metadata:
   ms.date: 07/26/2017
   ms.author: carolz
 abstract:
-  description: Med Azure Container Registry kan du skapa, lagra och hantera avbildningar av alla typer av behållardistributioner. Lär dig hur du använder Azure Container Registry med de här snabbstarterna, självstudierna och exemplen.
+  description: 'Med Azure Container Registry kan du skapa, lagra och hantera avbildningar av alla typer av behållardistributioner. Lär dig hur du använder Azure Container Registry med de här snabbstarterna, självstudierna och exemplen.'
 sections:
-- title: Snabbstarter på 5 minuter
-  items:
-  - type: paragraph
-    text: Lär dig hur du distribuerar Azure Container Registry.
-  - type: list
-    style: icon48
+  - title: Snabbstarter på 5 minuter
     items:
-    - image:
-        src: https://docs.microsoft.com/media/common/i_cligeneric.svg
-      text: Azure CLI
-      href: /azure/container-registry/container-registry-get-started-azure-cli
-    - image:
-        src: https://docs.microsoft.com/media/common/i_portal.svg
-      text: Azure Portal
-      href: /azure/container-registry/container-registry-get-started-portal
-    - image:
-        src: https://docs.microsoft.com/media/logos/logo_powershell.svg
-      text: Azure PowerShell
-      href: /azure/container-registry/container-registry-get-started-powershell
-- title: Steg för steg-självstudier
-  items:
-  - type: paragraph
-    text: Lär dig hur du använder Azure Container Registry med de här självstudierna.
-  - type: list
-    style: unordered
-    className: spaced noBullet
+      - type: paragraph
+        text: Lär dig hur du distribuerar Azure Container Registry.
+      - type: list
+        style: icon48
+        items:
+          - image:
+              src: 'https://docs.microsoft.com/media/common/i_cligeneric.svg'
+            text: Azure CLI
+            href: /azure/container-registry/container-registry-get-started-azure-cli
+          - image:
+              src: 'https://docs.microsoft.com/media/common/i_portal.svg'
+            text: Azure Portal
+            href: /azure/container-registry/container-registry-get-started-portal
+          - image:
+              src: 'https://docs.microsoft.com/media/logos/logo_powershell.svg'
+            text: Azure PowerShell
+            href: /azure/container-registry/container-registry-get-started-powershell
+  - title: Steg för steg-självstudier
     items:
-    - html: <a href="/azure/container-registry/container-registry-tutorial-quick-build">Skapa containeravbildningar med ACR-uppgifter</a>
-    - html: <a href="/azure/container-registry/container-registry-tutorial-prepare-registry">Geo-replikering för Container Registry</a>
-    - html: <a href="/azure/container-instances/container-instances-tutorial-prepare-app">Container Registry med Azure Container Instances</a>
-    - html: <a href="/azure/aks/tutorial-kubernetes-prepare-app">Container Registry med Azure Kubernetes Service (AKS)</a>
-    - html: <a href="/azure/service-fabric/service-fabric-tutorial-create-container-images">Container Registry med Service Fabric</a>
-- title: Utveckla dina färdigheter med Microsoft Learn
-  items:
-  - type: list
-    style: cards
-    className: cardsFTitle
+      - type: paragraph
+        text: Lär dig hur du använder Azure Container Registry med de här självstudierna.
+      - type: list
+        style: unordered
+        className: spaced noBullet
+        items:
+          - html: <a href="/azure/container-registry/container-registry-tutorial-quick-build">Skapa containeravbildningar med ACR-uppgifter</a>
+          - html: <a href="/azure/container-registry/container-registry-tutorial-prepare-registry">Geo-replikering för Container Registry</a>
+          - html: <a href="/azure/container-instances/container-instances-tutorial-prepare-app">Container Registry med Azure Container Instances</a>
+          - html: <a href="/azure/aks/tutorial-kubernetes-prepare-app">Container Registry med Azure Kubernetes Service (AKS)</a>
+          - html: <a href="/azure/service-fabric/service-fabric-tutorial-create-container-images">Container Registry med Service Fabric</a>
+  - title: Utveckla dina färdigheter med Microsoft Learn
     items:
-    - title: Skapa och lagra containeravbildningar med Azure Container Registry
-      href: /learn/modules/build-and-store-container-images/
-      image:
-        src: /learn/achievements/build-and-store-container-images.svg
-        href: /learn/modules/build-and-store-container-images/
-  - type: paragraph
-    text: <a href="/learn/browse/?products=azure-container-registry">Mer interaktiv inlärning...</a>
-- title: Referens
-  items:
-  - type: list
-    style: cards
-    className: cardsD
+      - type: list
+        style: cards
+        className: cardsFTitle
+        items:
+          - title: Skapa och lagra containeravbildningar med Azure Container Registry
+            href: /learn/modules/build-and-store-container-images/
+            image:
+              src: /learn/achievements/build-and-store-container-images.svg
+              href: /learn/modules/build-and-store-container-images/
+      - type: paragraph
+        text: <a href="/learn/browse/?products=azure-container-registry">Mer interaktiv inlärning...</a>
+  - title: Referens
     items:
-    - title: Kommandorad
-      html: <p><a href="/cli/azure/acr">Azure CLI</a></p><p><a href="/powershell/module/azurerm.containerregistry">PowerShell</a></p>
-    - title: Språk
-      html: <p><a href="/dotnet/api/overview/azure/containerregistry">.NET</a></p><p><a href="/python/api/overview/azure/container-registry">Python</a></p><p><a href="/java/api/overview/azure/containerregistry">Java</a></p><p><a href="/javascript/api/overview/azure/container-registry">Node.js</a></p>
-    - title: REST
-      html: <p><a href="/rest/api/containerregistry">REST API-referens</a></p><p><a href="/azure/templates/microsoft.containerregistry/registries">Resource Manager-mall</a></p><p><a href="/azure/container-registry/container-registry-webhook-reference">Webhook-schema</a></p>
+      - type: list
+        style: cards
+        className: cardsD
+        items:
+          - title: Kommandorad
+            html: <p><a href="/cli/azure/acr">Azure CLI</a></p><p><a href="/powershell/module/az.containerregistry">PowerShell</a></p>
+          - title: Språk
+            html: <p><a href="/dotnet/api/overview/azure/containerregistry">NET</a></p><p><a href="/python/api/overview/azure/container-registry">Python</a></p><p><a href="/java/api/overview/azure/containerregistry">Java</a></p><p><a href="/javascript/api/overview/azure/container-registry">Node.js</a></p>
+          - title: REST
+            html: <p><a href="/rest/api/containerregistry">REST API-referens</a></p><p><a href="/azure/templates/microsoft.containerregistry/registries">Resource Manager-mall</a></p><p><a href="/azure/container-registry/container-registry-webhook-reference">Webhook-schema</a></p>
