--- a/articles/dns/index.yml
+++ b/articles/dns/index.yml
@@ -1,10 +1,4 @@
 ### YamlMime:YamlDocument
-ms.openlocfilehash: 71317b5a5cf493eb20f7421c79cbe16aaf8f7f99
-ms.sourcegitcommit: bd15a37170e57b651c54d8b194e5a99b5bcfb58f
-ms.translationtype: HT
-ms.contentlocale: sv-SE
-ms.lasthandoff: 03/07/2019
-ms.locfileid: "57534658"
 documentType: LandingData
 title: Dokumentation om Azure DNS
 metadata:
@@ -22,79 +16,79 @@ metadata:
   ms.date: 6/13/2018
   ms.author: kumud
 abstract:
-  description: Läs hur du använder Azure DNS. Snabbstarter, självstudier, exempel med mera som visar hur du konfigurerar och hanterar DNS-zoner och -poster för domännamn.
+  description: 'Läs hur du använder Azure DNS. Snabbstarter, självstudier, exempel med mera som visar hur du konfigurerar och hanterar DNS-zoner och -poster för domännamn.'
 sections:
-- title: Snabbstarter på 5 minuter
-  items:
-  - type: paragraph
-    text: Lär dig hur du skapar DNS-zoner och -poster för domännamn.
-  - type: list
-    style: icon48
+  - title: Snabbstarter på 5 minuter
     items:
-    - image:
-        src: https://docs.microsoft.com/media/common/i_portal.svg
-      text: Azure Portal
-      href: /azure/dns/dns-getstarted-portal
-    - image:
-        src: https://docs.microsoft.com/media/logos/logo_powershell.svg
-      text: Azure PowerShell
-      href: /azure/dns/dns-getstarted-powershell
-    - image:
-        src: https://docs.microsoft.com/media/common/cli.svg
-      text: Azure CLI
-      href: /azure/dns/dns-getstarted-cli
-- title: Steg för steg-självstudier
-  items:
-  - type: paragraph
-    text: Lär dig hur du använder Azure DNS som värd för din domän, skapar anpassade DNS-poster för en webbapp med Azure DNS och skapar en privat DNS-zon och DNS-poster.
-  - type: list
-    style: unordered
+      - type: paragraph
+        text: Lär dig hur du skapar DNS-zoner och -poster för domännamn.
+      - type: list
+        style: icon48
+        items:
+          - image:
+              src: 'https://docs.microsoft.com/media/common/i_portal.svg'
+            text: Azure Portal
+            href: /azure/dns/dns-getstarted-portal
+          - image:
+              src: 'https://docs.microsoft.com/media/logos/logo_powershell.svg'
+            text: Azure PowerShell
+            href: /azure/dns/dns-getstarted-powershell
+          - image:
+              src: 'https://docs.microsoft.com/media/common/cli.svg'
+            text: Azure CLI
+            href: /azure/dns/dns-getstarted-cli
+  - title: Steg för steg-självstudier
     items:
-    - html: <a href="/azure/dns/dns-delegate-domain-azure-dns">Använda Azure DNS som värd för din domän</a>
-    - html: <a href="/azure/dns/dns-web-sites-custom-domain">Skapa anpassade DNS-poster för en webbapp</a>
-    - html: <a href="/azure/dns/private-dns-getstarted-powershell">Skapa privat DNS-zon och -post</a>
-    - html: <a href="/azure/dns/tutorial-alias-pip">Konfigurera en aliaspost för att referera till en offentlig IP-adress i Azure</a>
-    - html: <a href="/azure/dns/tutorial-alias-tm">Konfigurera en aliaspost för att hantera apex-domännamn med Traffic Manager</a>
-    - html: <a href="/azure/dns/tutorial-alias-rr">Konfigurera en aliaspost för zonposter</a>
-- title: Kostnadsfri videoutbildning för Pluralsight
-  items:
-  - type: list
-    style: cards
-    className: cardsFTitle
+      - type: paragraph
+        text: 'Lär dig hur du använder Azure DNS som värd för din domän, skapar anpassade DNS-poster för en webbapp med Azure DNS och skapar en privat DNS-zon och DNS-poster.'
+      - type: list
+        style: unordered
+        items:
+          - html: <a href="/azure/dns/dns-delegate-domain-azure-dns">Använda Azure DNS som värd för din domän</a>
+          - html: <a href="/azure/dns/dns-web-sites-custom-domain">Skapa anpassade DNS-poster för en webbapp</a>
+          - html: <a href="/azure/dns/private-dns-getstarted-powershell">Skapa privat DNS-zon och -post</a>
+          - html: <a href="/azure/dns/tutorial-alias-pip">Konfigurera en aliaspost för att referera till en offentlig IP-adress i Azure</a>
+          - html: <a href="/azure/dns/tutorial-alias-tm">Konfigurera en aliaspost för att hantera apex-domännamn med Traffic Manager</a>
+          - html: <a href="/azure/dns/tutorial-alias-rr">Konfigurera en aliaspost för zonposter</a>
+  - title: Kostnadsfri videoutbildning för Pluralsight
     items:
-    - title: Azure-administratör
-      href: https://go.microsoft.com/fwlink/?linkid=2012827
-      image:
-        src: https://docs.microsoft.com/media/logos/logo_pluralsight.svg
-        href: https://go.microsoft.com/fwlink/?linkid=2012827
-    - title: Azure-lösningsarkitekt
-      href: https://go.microsoft.com/fwlink/?linkid=2012824
-      image:
-        src: https://docs.microsoft.com/media/logos/logo_pluralsight.svg
-        href: https://go.microsoft.com/fwlink/?linkid=2012824
-    - title: Azure-administration för AWS-administratörer
-      href: https://app.pluralsight.com/library/courses/azure-administration-aws-administrators/table-of-contents
-      image:
-        src: https://docs.microsoft.com/media/logos/logo_pluralsight.svg
-        href: https://app.pluralsight.com/library/courses/azure-administration-aws-administrators/table-of-contents
-- title: Exempel
-  items:
-  - type: paragraph
-    text: Skriptexempel för vanliga åtgärder.
-  - type: list
-    style: unordered
-    className: spaced noBullet
+      - type: list
+        style: cards
+        className: cardsFTitle
+        items:
+          - title: Azure-administratör
+            href: 'https://go.microsoft.com/fwlink/?linkid=2012827'
+            image:
+              src: 'https://docs.microsoft.com/media/logos/logo_pluralsight.svg'
+              href: 'https://go.microsoft.com/fwlink/?linkid=2012827'
+          - title: Azure-lösningsarkitekt
+            href: 'https://go.microsoft.com/fwlink/?linkid=2012824'
+            image:
+              src: 'https://docs.microsoft.com/media/logos/logo_pluralsight.svg'
+              href: 'https://go.microsoft.com/fwlink/?linkid=2012824'
+          - title: Azure-administration för AWS-administratörer
+            href: 'https://app.pluralsight.com/library/courses/azure-administration-aws-administrators/table-of-contents'
+            image:
+              src: 'https://docs.microsoft.com/media/logos/logo_pluralsight.svg'
+              href: 'https://app.pluralsight.com/library/courses/azure-administration-aws-administrators/table-of-contents'
+  - title: Exempel
     items:
-    - html: <a href="/azure/dns/cli-samples">Azure CLI</a>
-- title: Referens
-  items:
-  - type: list
-    style: cards
-    className: cardsD
+      - type: paragraph
+        text: Skriptexempel för vanliga åtgärder.
+      - type: list
+        style: unordered
+        className: spaced noBullet
+        items:
+          - html: <a href="/azure/dns/cli-samples">Azure CLI</a>
+  - title: Referens
     items:
-    - title: Kommandorad
-      html: <p><a href="/powershell/module/azurerm.dns">PowerShell</a></p><p><a href="/cli/azure/network/traffic-manager">Azure CLI</a></p>
-    - title: Språk
-      html: <p><a href="/dotnet/api/microsoft.azure.management.dns.models">NET</a></p><p><a href="/java/api/com.microsoft.azure.management.dns">Java</a></p><p><a href="https://azure.github.io/azure-sdk-for-node/azure-arm-dns/latest/">Node.js</a></p><p><a href="https://www.rubydoc.info/gems/azure_mgmt_dns/0.8.0">Ruby</a></p><p><a href="https://docs.microsoft.com/python/api/azure.mgmt.dns">Python</a></p>
-    - title: REST
-      html: <p><a href="/rest/api/dns/">REST API-referens</a></p>
+      - type: list
+        style: cards
+        className: cardsD
+        items:
+          - title: Kommandorad
+            html: <p><a href="/powershell/module/az.dns">PowerShell</a></p><p><a href="/cli/azure/network/traffic-manager">Azure CLI</a></p>
+          - title: Språk
+            html: '<p><a href="/dotnet/api/microsoft.azure.management.dns.models">NET</a></p><p><a href="/java/api/com.microsoft.azure.management.dns">Java</a></p><p><a href="https://azure.github.io/azure-sdk-for-node/azure-arm-dns/latest/">Node.js</a></p><p><a href="https://www.rubydoc.info/gems/azure_mgmt_dns/0.8.0">Ruby</a></p><p><a href="https://docs.microsoft.com/python/api/azure.mgmt.dns">Python</a></p>'
+          - title: REST
+            html: <p><a href="/rest/api/dns/">REST API-referens</a></p>
