--- a/articles/load-balancer/index.yml
+++ b/articles/load-balancer/index.yml
@@ -1,16 +1,10 @@
 ### YamlMime:YamlDocument
-ms.openlocfilehash: 80ead4921ac13117bbbcbfadfc1b58753759375e
-ms.sourcegitcommit: 94305d8ee91f217ec98039fde2ac4326761fea22
-ms.translationtype: HT
-ms.contentlocale: sv-SE
-ms.lasthandoff: 03/05/2019
-ms.locfileid: "57404747"
 documentType: LandingData
 title: Lastbalanserare
 metadata:
-  document_id: 
+  document_id: null
   title: Lastbalanserare
-  meta.description: Learn how to use Azure Load Balancer. Quickstarts, tutorials, samples, and more, show you how to deploy a load balancer and load balance traffic to and from virtual machines and cloud resources, and in cross-premises virtual networks.
+  meta.description: 'Learn how to use Azure Load Balancer. Quickstarts, tutorials, samples, and more, show you how to deploy a load balancer and load balance traffic to and from virtual machines and cloud resources, and in cross-premises virtual networks.'
   services: load-balancer
   author: KumudD
   manager: twooley
@@ -21,92 +15,92 @@ metadata:
   ms.date: 11/14/2018
   ms.author: kumud
 abstract:
-  description: Lär dig hur du använder Azure Load Balancer. Snabbstarter, självstudier, exempel med mera som visar hur du distribuerar en lastbalanserare och lastbalanserar trafik till och från virtuella datorer och molnresurser och mellan lokala virtuella nätverk på plats.
+  description: 'Lär dig hur du använder Azure Load Balancer. Snabbstarter, självstudier, exempel med mera som visar hur du distribuerar en lastbalanserare och lastbalanserar trafik till och från virtuella datorer och molnresurser och mellan lokala virtuella nätverk på plats.'
 sections:
-- title: Snabbstarter på 5 minuter
-  items:
-  - type: paragraph
-    text: Lär dig hur du skapar en lastbalanserare, skapar virtuella datorer som fungerar som serverdelar, installerar ett anpassat webbprogram på en virtuell dator och sedan lastbalanserar webbprogrammet mellan de virtuella datorerna.
-  - type: list
-    style: icon48
+  - title: Snabbstarter på 5 minuter
     items:
-    - image:
-        src: https://docs.microsoft.com/media/common/i_portal.svg
-      text: Azure Portal
-      href: /azure/load-balancer/quickstart-create-basic-load-balancer-portal
-    - image:
-        src: https://docs.microsoft.com/media/logos/logo_powershell.svg
-      text: Azure PowerShell
-      href: /azure/load-balancer/quickstart-create-basic-load-balancer-powershell
-    - image:
-        src: https://docs.microsoft.com/media/common/cli.svg
-      text: Azure CLI
-      href: /azure/load-balancer/quickstart-create-basic-load-balancer-cli
-- title: Steg för steg-självstudier
-  items:
-  - type: paragraph
-    text: Lär dig hur du skapar en lastbalanserare och lastbalanserar tjänster på virtuella datorer.
-  - type: list
-    style: unordered
+      - type: paragraph
+        text: 'Lär dig hur du skapar en lastbalanserare, skapar virtuella datorer som fungerar som serverdelar, installerar ett anpassat webbprogram på en virtuell dator och sedan lastbalanserar webbprogrammet mellan de virtuella datorerna.'
+      - type: list
+        style: icon48
+        items:
+          - image:
+              src: 'https://docs.microsoft.com/media/common/i_portal.svg'
+            text: Azure Portal
+            href: /azure/load-balancer/quickstart-create-basic-load-balancer-portal
+          - image:
+              src: 'https://docs.microsoft.com/media/logos/logo_powershell.svg'
+            text: Azure PowerShell
+            href: /azure/load-balancer/quickstart-create-basic-load-balancer-powershell
+          - image:
+              src: 'https://docs.microsoft.com/media/common/cli.svg'
+            text: Azure CLI
+            href: /azure/load-balancer/quickstart-create-basic-load-balancer-cli
+  - title: Steg för steg-självstudier
     items:
-    - html: <a href="/azure/load-balancer/tutorial-load-balancer-standard-manage-portal">Belastningsutjämna Internettrafik till virtuella datorer</a>
-    - html: <a href="/azure/load-balancer/tutorial-load-balancer-basic-internal-portal">Belastningsutjämna intern trafik till virtuella datorer</a>
-    - html: <a href="/azure/load-balancer/tutorial-load-balancer-standard-public-zone-redundant-portal">Belastningsutjämna virtuella datorer mellan tillgänglighetszoner</a>
-    - html: <a href="/azure/load-balancer/tutorial-load-balancer-standard-public-zonal-portal">Belastningsutjämna virtuella datorer i en specifik tillgänglighetszon</a>
-    - html: <a href="/azure/load-balancer/tutorial-load-balancer-port-forwarding-portal">Konfigurera portvidarebefordran i Load Balancer</a>
-- title: Utveckla dina färdigheter med Microsoft Learn
-  items:
-  - type: list
-    style: cards
-    className: cardsFTitle
+      - type: paragraph
+        text: Lär dig hur du skapar en lastbalanserare och lastbalanserar tjänster på virtuella datorer.
+      - type: list
+        style: unordered
+        items:
+          - html: <a href="/azure/load-balancer/tutorial-load-balancer-standard-manage-portal">Belastningsutjämna Internettrafik till virtuella datorer</a>
+          - html: <a href="/azure/load-balancer/tutorial-load-balancer-basic-internal-portal">Belastningsutjämna intern trafik till virtuella datorer</a>
+          - html: <a href="/azure/load-balancer/tutorial-load-balancer-standard-public-zone-redundant-portal">Belastningsutjämna virtuella datorer mellan tillgänglighetszoner</a>
+          - html: <a href="/azure/load-balancer/tutorial-load-balancer-standard-public-zonal-portal">Belastningsutjämna virtuella datorer i en specifik tillgänglighetszon</a>
+          - html: <a href="/azure/load-balancer/tutorial-load-balancer-port-forwarding-portal">Konfigurera portvidarebefordran i Load Balancer</a>
+  - title: Utveckla dina färdigheter med Microsoft Learn
     items:
-    - title: Skapa hög tillgänglighet för dina virtuella datorer
-      href: /learn/modules/intro-to-azure-virtual-machines/5-high-availability
-      image:
-        src: /learn/achievements/make-your-virtual-machines-highly-available.svg
-        href: /learn/modules/intro-to-azure-virtual-machines/5-high-availability
-  - type: paragraph
-    text: <a href="/learn/browse/?products=azure-virtual-machines">Mer interaktiv inlärning...</a>
-- title: Kostnadsfri videoutbildning för Pluralsight
-  items:
-  - type: list
-    style: cards
-    className: cardsFTitle
+      - type: list
+        style: cards
+        className: cardsFTitle
+        items:
+          - title: Skapa hög tillgänglighet för dina virtuella datorer
+            href: /learn/modules/intro-to-azure-virtual-machines/5-high-availability
+            image:
+              src: /learn/achievements/make-your-virtual-machines-highly-available.svg
+              href: /learn/modules/intro-to-azure-virtual-machines/5-high-availability
+      - type: paragraph
+        text: <a href="/learn/browse/?products=azure-virtual-machines">Mer interaktiv inlärning...</a>
+  - title: Kostnadsfri videoutbildning för Pluralsight
     items:
-    - title: Azure-administratör
-      href: https://go.microsoft.com/fwlink/?linkid=2012827
-      image:
-        src: https://docs.microsoft.com/media/logos/logo_pluralsight.svg
-        href: https://go.microsoft.com/fwlink/?linkid=2012827
-    - title: Azure-lösningsarkitekt
-      href: https://go.microsoft.com/fwlink/?linkid=2012824
-      image:
-        src: https://docs.microsoft.com/media/logos/logo_pluralsight.svg
-        href: https://go.microsoft.com/fwlink/?linkid=2012824
-    - title: Azure-administration för AWS-administratörer
-      href: https://app.pluralsight.com/library/courses/azure-administration-aws-administrators/table-of-contents
-      image:
-        src: https://docs.microsoft.com/media/logos/logo_pluralsight.svg
-        href: https://app.pluralsight.com/library/courses/azure-administration-aws-administrators/table-of-contents
-- title: Exempel
-  items:
-  - type: paragraph
-    text: Skriptexempel för vanliga åtgärder.
-  - type: list
-    style: unordered
-    className: spaced noBullet
+      - type: list
+        style: cards
+        className: cardsFTitle
+        items:
+          - title: Azure-administratör
+            href: 'https://go.microsoft.com/fwlink/?linkid=2012827'
+            image:
+              src: 'https://docs.microsoft.com/media/logos/logo_pluralsight.svg'
+              href: 'https://go.microsoft.com/fwlink/?linkid=2012827'
+          - title: Azure-lösningsarkitekt
+            href: 'https://go.microsoft.com/fwlink/?linkid=2012824'
+            image:
+              src: 'https://docs.microsoft.com/media/logos/logo_pluralsight.svg'
+              href: 'https://go.microsoft.com/fwlink/?linkid=2012824'
+          - title: Azure-administration för AWS-administratörer
+            href: 'https://app.pluralsight.com/library/courses/azure-administration-aws-administrators/table-of-contents'
+            image:
+              src: 'https://docs.microsoft.com/media/logos/logo_pluralsight.svg'
+              href: 'https://app.pluralsight.com/library/courses/azure-administration-aws-administrators/table-of-contents'
+  - title: Exempel
     items:
-    - html: <a href="/azure/load-balancer/cli-samples">Azure CLI</a>
-    - html: <a href="/azure/load-balancer/powershell-samples">PowerShell</a>
-- title: Referens
-  items:
-  - type: list
-    style: cards
-    className: cardsD
+      - type: paragraph
+        text: Skriptexempel för vanliga åtgärder.
+      - type: list
+        style: unordered
+        className: spaced noBullet
+        items:
+          - html: <a href="/azure/load-balancer/cli-samples">Azure CLI</a>
+          - html: <a href="/azure/load-balancer/powershell-samples">PowerShell</a>
+  - title: Referens
     items:
-    - title: Kommandorad
-      html: <p><a href="/powershell/module/azurerm.network#load_balancer">PowerShell</a></p><p><a href="/cli/azure/network/lb">Azure CLI</a></p>
-    - title: Språk
-      html: <p><a href="/dotnet/api/overview/azure/virtual-network">NET</a></p><p><a href="/java/api/com.microsoft.azure.management.network">Java</a></p><p><a href="https://docs.microsoft.com/python/api/azure.mgmt.network.v2017_10_01.models.LoadBalancer">Node.js</a></p><p><a href="https://docs.microsoft.com/python/api/azure.mgmt.network.v2015_06_15.operations.loadbalancersoperations">Python</a></p>
-    - title: REST
-      html: <p><a href="/rest/api/load-balancer/">REST API-referens</a></p>
+      - type: list
+        style: cards
+        className: cardsD
+        items:
+          - title: Kommandorad
+            html: '<p><a href="/powershell/module/az.network#load_balancer">PowerShell</a></p><p><a href="/cli/azure/network/lb">Azure CLI</a></p>'
+          - title: Språk
+            html: '<p><a href="/dotnet/api/overview/azure/virtual-network">NET</a></p><p><a href="/java/api/com.microsoft.azure.management.network">Java</a></p><p><a href="https://docs.microsoft.com/python/api/azure.mgmt.network.v2017_10_01.models.LoadBalancer">Node.js</a></p><p><a href="https://docs.microsoft.com/python/api/azure.mgmt.network.v2015_06_15.operations.loadbalancersoperations">Python</a></p>'
+          - title: REST
+            html: <p><a href="/rest/api/load-balancer/">REST API-referens</a></p>
