--- a/articles/service-bus-messaging/index.yml
+++ b/articles/service-bus-messaging/index.yml
@@ -1,15 +1,9 @@
 ### YamlMime:YamlDocument
-ms.openlocfilehash: 04f42de320dff12e95897ff8bc8c95f8c32ff090
-ms.sourcegitcommit: 0fc99ab4fbc6922064fc27d64161be6072896b21
-ms.translationtype: HT
-ms.contentlocale: sv-SE
-ms.lasthandoff: 11/13/2018
-ms.locfileid: "51578220"
 documentType: LandingData
 title: Dokumentation om Azure Service Bus-meddelanden
 metadata:
   document_id: ''
-  title: Dokumentation om Azure Service Bus-meddelanden – Självstudier, snabbstarter, API-referens
+  title: 'Dokumentation om Azure Service Bus-meddelanden – Självstudier, snabbstarter, API-referens'
   meta.description: Learn how to set up messaging that connects applications and services across on-premises and cloud environments.
   services: service-bus-messaging
   author: spelluru
@@ -21,149 +15,149 @@ metadata:
   ms.date: 05/16/2018
   ms.author: spelluru
 abstract:
-  description: Azure Service Bus är en meddelandetjänst i molnet för flera klienter som du kan använda för att skicka information mellan program och tjänster. Asynkrona åtgärder ger dig en flexibel, asynkron meddelandetjänst med funktioner för strukturerade meddelanden enligt FIFO-metoden (först-in-först-ut) och funktioner för publicering/prenumeration.<p>Lär dig hur du använder Azure Service Bus-meddelandetjänster för att skicka och ta emot meddelanden till och från köer samt publicera och prenumerera på meddelanden med ämnen och prenumerationer.</p>
+  description: 'Azure Service Bus är en meddelandetjänst i molnet för flera klienter som du kan använda för att skicka information mellan program och tjänster. Asynkrona åtgärder ger dig en flexibel, asynkron meddelandetjänst med funktioner för strukturerade meddelanden enligt FIFO-metoden (först-in-först-ut) och funktioner för publicering/prenumeration.<p>Lär dig hur du använder Azure Service Bus-meddelandetjänster för att skicka och ta emot meddelanden till och från köer samt publicera och prenumerera på meddelanden med ämnen och prenumerationer.</p>'
   aside:
     image:
-      alt: 
+      alt: null
       height: 110
-      src: https://docs.microsoft.com/azure/service-bus-messaging/media/index/azure-messaging-and-event-based-architecture.png
+      src: 'https://docs.microsoft.com/azure/service-bus-messaging/media/index/azure-messaging-and-event-based-architecture.png'
       width: 250
     title: 'Meddelandefunktioner och händelsebaserad arkitektur i Azure (1: 24:32)'
-    href: https://azure.microsoft.com/resources/videos/build-2018-azure-messaging-and-event-based-architecture-in-the-real-world-lessons-learned-rebuilding-microsoft-s-supply-chain-on-azure-serverless/
+    href: 'https://azure.microsoft.com/resources/videos/build-2018-azure-messaging-and-event-based-architecture-in-the-real-world-lessons-learned-rebuilding-microsoft-s-supply-chain-on-azure-serverless/'
     width: 250
 sections:
-- title: Snabbstarter på 5 minuter
-  items:
-  - type: paragraph
-    text: 'Lär dig hur du skickar och tar emot meddelanden till och från Service Bus-<b>köer</b>:'
-  - type: list
-    style: icon48
+  - title: Snabbstarter på 5 minuter
     items:
-    - image:
-        src: /azure/service-bus-messaging/media/index/logo_net.svg
-      text: .NET
-      href: /azure/service-bus-messaging/service-bus-dotnet-get-started-with-queues
-    - image:
-        src: /azure/service-bus-messaging/media/index/logo_java.svg
-      text: Java
-      href: /azure/service-bus-messaging/service-bus-java-how-to-use-queues
-    - image:
-        src: /azure/service-bus-messaging/media/index/logo_nodejs.svg
-      text: Node.js
-      href: /azure/service-bus-messaging/service-bus-nodejs-how-to-use-queues
-    - image:
-        src: /azure/service-bus-messaging/media/index/logo_python.svg
-      text: Python
-      href: /azure/service-bus-messaging/service-bus-python-how-to-use-queues
-    - image:
-        src: /azure/service-bus-messaging/media/index/ruby.svg
-      text: Ruby
-      href: /azure/service-bus-messaging/service-bus-ruby-how-to-use-queues
-    - image:
-        src: /azure/service-bus-messaging/media/index/portal.svg
-      text: Azure Portal
-      href: /azure/service-bus-messaging/service-bus-quickstart-portal
-    - image:
-        src: /azure/service-bus-messaging/media/index/cli.svg
-      text: Azure CLI
-      href: /azure/service-bus-messaging/service-bus-quickstart-cli
-    - image:
-        src: /azure/service-bus-messaging/media/index/logo_powershell.svg
-      text: Azure PowerShell
-      href: /azure/service-bus-messaging/service-bus-quickstart-powershell
-  - type: paragraph
-    text: 'Lär dig hur du publicerar och prenumererar på meddelanden med <b>Service Bus-ämnen och -prenumerationer</b>:'
-  - type: list
-    style: icon48
+      - type: paragraph
+        text: 'Lär dig hur du skickar och tar emot meddelanden till och från Service Bus-<b>köer</b>:'
+      - type: list
+        style: icon48
+        items:
+          - image:
+              src: /azure/service-bus-messaging/media/index/logo_net.svg
+            text: .NET
+            href: /azure/service-bus-messaging/service-bus-dotnet-get-started-with-queues
+          - image:
+              src: /azure/service-bus-messaging/media/index/logo_java.svg
+            text: Java
+            href: /azure/service-bus-messaging/service-bus-java-how-to-use-queues
+          - image:
+              src: /azure/service-bus-messaging/media/index/logo_nodejs.svg
+            text: Node.js
+            href: /azure/service-bus-messaging/service-bus-nodejs-how-to-use-queues
+          - image:
+              src: /azure/service-bus-messaging/media/index/logo_python.svg
+            text: Python
+            href: /azure/service-bus-messaging/service-bus-python-how-to-use-queues
+          - image:
+              src: /azure/service-bus-messaging/media/index/ruby.svg
+            text: Ruby
+            href: /azure/service-bus-messaging/service-bus-ruby-how-to-use-queues
+          - image:
+              src: /azure/service-bus-messaging/media/index/portal.svg
+            text: Azure Portal
+            href: /azure/service-bus-messaging/service-bus-quickstart-portal
+          - image:
+              src: /azure/service-bus-messaging/media/index/cli.svg
+            text: Azure CLI
+            href: /azure/service-bus-messaging/service-bus-quickstart-cli
+          - image:
+              src: /azure/service-bus-messaging/media/index/logo_powershell.svg
+            text: Azure PowerShell
+            href: /azure/service-bus-messaging/service-bus-quickstart-powershell
+      - type: paragraph
+        text: 'Lär dig hur du publicerar och prenumererar på meddelanden med <b>Service Bus-ämnen och -prenumerationer</b>:'
+      - type: list
+        style: icon48
+        items:
+          - image:
+              src: /azure/service-bus-messaging/media/index/logo_net.svg
+            text: .NET
+            href: /azure/service-bus-messaging/service-bus-dotnet-how-to-use-topics-subscriptions
+          - image:
+              src: /azure/service-bus-messaging/media/index/logo_java.svg
+            text: Java
+            href: /azure/service-bus-messaging/service-bus-java-how-to-use-topics-subscriptions
+          - image:
+              src: /azure/service-bus-messaging/media/index/logo_nodejs.svg
+            text: Node.js
+            href: /azure/service-bus-messaging/service-bus-nodejs-how-to-use-topics-subscriptions
+          - image:
+              src: /azure/service-bus-messaging/media/index/logo_php.svg
+            text: PHP
+            href: /azure/service-bus-messaging/service-bus-php-how-to-use-topics-subscriptions
+          - image:
+              src: /azure/service-bus-messaging/media/index/logo_python.svg
+            text: Python
+            href: /azure/service-bus-messaging/service-bus-python-how-to-use-topics-subscriptions
+          - image:
+              src: /azure/service-bus-messaging/media/index/ruby.svg
+            text: Ruby
+            href: /azure/service-bus-messaging/service-bus-ruby-how-to-use-topics-subscriptions
+          - image:
+              src: /azure/service-bus-messaging/media/index/portal.svg
+            text: Azure Portal
+            href: /azure/service-bus-messaging/service-bus-quickstart-portal
+          - image:
+              src: /azure/service-bus-messaging/media/index/cli.svg
+            text: Azure CLI
+            href: /azure/service-bus-messaging/service-bus-quickstart-cli
+          - image:
+              src: /azure/service-bus-messaging/media/index/logo_powershell.svg
+            text: Azure PowerShell
+            href: /azure/service-bus-messaging/service-bus-quickstart-powershell
+  - title: Steg för steg-självstudier
     items:
-    - image:
-        src: /azure/service-bus-messaging/media/index/logo_net.svg
-      text: .NET
-      href: /azure/service-bus-messaging/service-bus-dotnet-how-to-use-topics-subscriptions
-    - image:
-        src: /azure/service-bus-messaging/media/index/logo_java.svg
-      text: Java
-      href: /azure/service-bus-messaging/service-bus-java-how-to-use-topics-subscriptions
-    - image:
-        src: /azure/service-bus-messaging/media/index/logo_nodejs.svg
-      text: Node.js
-      href: /azure/service-bus-messaging/service-bus-nodejs-how-to-use-topics-subscriptions
-    - image:
-        src: /azure/service-bus-messaging/media/index/logo_php.svg
-      text: PHP
-      href: /azure/service-bus-messaging/service-bus-php-how-to-use-topics-subscriptions
-    - image:
-        src: /azure/service-bus-messaging/media/index/logo_python.svg
-      text: Python
-      href: /azure/service-bus-messaging/service-bus-python-how-to-use-topics-subscriptions
-    - image:
-        src: /azure/service-bus-messaging/media/index/ruby.svg
-      text: Ruby
-      href: /azure/service-bus-messaging/service-bus-ruby-how-to-use-topics-subscriptions
-    - image:
-        src: /azure/service-bus-messaging/media/index/portal.svg
-      text: Azure Portal
-      href: /azure/service-bus-messaging/service-bus-quickstart-portal
-    - image:
-        src: /azure/service-bus-messaging/media/index/cli.svg
-      text: Azure CLI
-      href: /azure/service-bus-messaging/service-bus-quickstart-cli
-    - image:
-        src: /azure/service-bus-messaging/media/index/logo_powershell.svg
-      text: Azure PowerShell
-      href: /azure/service-bus-messaging/service-bus-quickstart-powershell
-- title: Steg för steg-självstudier
-  items:
-  - type: paragraph
-    text: Lär dig hur du skapar, hanterar och skickar och tar emot meddelanden med Azure Service Bus
-  - type: list
-    style: ordered
+      - type: paragraph
+        text: 'Lär dig hur du skapar, hanterar och skickar och tar emot meddelanden med Azure Service Bus'
+      - type: list
+        style: ordered
+        items:
+          - html: <a href="/azure/service-bus-messaging/service-bus-tutorial-topics-subscriptions-cli">Använda ämnen och prenumerationer för att uppdatera inventering med Azure CLI</a>
+          - html: <a href="/azure/service-bus-messaging/service-bus-tutorial-topics-subscriptions-portal">Använda ämnen och prenumerationer för att uppdatera inventering med Azure Portal</a>
+          - html: <a href="/azure/service-bus-messaging/service-bus-tutorial-topics-subscriptions-powershell">Använda ämnen och prenumerationer för att uppdatera inventering med Azure PowerShell</a>
+  - title: Utveckla dina färdigheter med Microsoft Learn
     items:
-    - html: <a href="/azure/service-bus-messaging/service-bus-tutorial-topics-subscriptions-cli">Använda ämnen och prenumerationer för att uppdatera inventering med Azure CLI</a>
-    - html: <a href="/azure/service-bus-messaging/service-bus-tutorial-topics-subscriptions-portal">Använda ämnen och prenumerationer för att uppdatera inventering med Azure Portal</a>
-    - html: <a href="/azure/service-bus-messaging/service-bus-tutorial-topics-subscriptions-powershell">Använda ämnen och prenumerationer för att uppdatera inventering med Azure PowerShell</a>
-- title: Utveckla dina färdigheter med Microsoft Learn
-  items:
-  - type: list
-    style: cards
-    className: cardsFTitle
+      - type: list
+        style: cards
+        className: cardsFTitle
+        items:
+          - title: Implementera arbetsflöden för meddelandebaserad kommunikation med Azure Service Bus
+            href: /learn/modules/implement-message-workflows-with-service-bus/
+            image:
+              src: /learn/achievements/implement-message-workflows-with-service-bus.svg
+      - type: paragraph
+        text: <a href="/learn/browse/?products=azure-service-bus">Mer interaktiv inlärning...</a>
+  - title: Kostnadsfri videoutbildning för Pluralsight
     items:
-    - title: Implementera arbetsflöden för meddelandebaserad kommunikation med Azure Service Bus
-      href: /learn/modules/implement-message-workflows-with-service-bus/
-      image:
-        src: /learn/achievements/implement-message-workflows-with-service-bus.svg
-  - type: paragraph
-    text: <a href="/learn/browse/?products=azure-service-bus">Mer interaktiv inlärning...</a>
-- title: Kostnadsfri videoutbildning för Pluralsight
-  items:
-  - type: list
-    style: cards
-    className: cardsFTitle
+      - type: list
+        style: cards
+        className: cardsFTitle
+        items:
+          - title: Utveckla med .NET för Azure
+            href: 'https://www.pluralsight.com/courses/developing-dotnet-microsoft-azure-getting-started?twoid=FEED65A23CB221A7'
+            image:
+              src: 'https://docs.microsoft.com/media/logos/logo_pluralsight.svg'
+              href: 'https://www.pluralsight.com/courses/developing-dotnet-microsoft-azure-getting-started?twoid=FEED65A23CB221A7'
+  - title: Exempel
     items:
-    - title: Utveckla med .NET för Azure
-      href: https://www.pluralsight.com/courses/developing-dotnet-microsoft-azure-getting-started?twoid=FEED65A23CB221A7
-      image:
-        src: https://docs.microsoft.com/media/logos/logo_pluralsight.svg
-        href: https://www.pluralsight.com/courses/developing-dotnet-microsoft-azure-getting-started?twoid=FEED65A23CB221A7
-- title: Exempel
-  items:
-  - type: paragraph
-    text: Hitta skript för att hantera vanliga uppgifter.
-  - type: list
-    style: unordered
-    className: spaced noBullet
+      - type: paragraph
+        text: Hitta skript för att hantera vanliga uppgifter.
+      - type: list
+        style: unordered
+        className: spaced noBullet
+        items:
+          - html: '<a href="https://github.com/Azure/azure-service-bus/tree/master/samples/Management">Azure PowerShell</a>'
+          - html: '<a href="https://github.com/Azure/azure-service-bus/tree/master/samples/Management">Azure CLI</a>'
+  - title: Referens
     items:
-    - html: <a href="https://github.com/Azure/azure-service-bus/tree/master/samples/Management">Azure PowerShell</a>
-    - html: <a href="https://github.com/Azure/azure-service-bus/tree/master/samples/Management">Azure CLI</a>
-- title: Referens
-  items:
-  - type: list
-    style: cards
-    className: cardsD
-    items:
-    - title: Kommandorad
-      html: <p><a href="/powershell/module/azurerm.servicebus/">Azure PowerShell</a></p><p><a href="/cli/azure/servicebus">Azure CLI</a></p>
-    - title: Språk
-      html: <p><a href="/dotnet/api/microsoft.servicebus.messaging">.NET Framework</a></p><p><a href="/dotnet/api/microsoft.azure.servicebus">.NET-standard</a></p><p><a href="/java/api/overview/azure/servicebus">Java</a></p><p><a href="/javascript/api/overview/azure/service-bus">Node.js</a></p>
-    - title: REST
-      html: <p><a href="/rest/api/servicebus/">REST API-referens</a></p>
+      - type: list
+        style: cards
+        className: cardsD
+        items:
+          - title: Kommandorad
+            html: <p><a href="/powershell/module/az.servicebus/">Azure PowerShell</a></p><p><a href="/cli/azure/servicebus">Azure CLI</a></p>
+          - title: Språk
+            html: <p><a href="/dotnet/api/microsoft.servicebus.messaging">.NET Framework</a></p><p><a href="/dotnet/api/microsoft.azure.servicebus">.NET-standard</a></p><p><a href="/java/api/overview/azure/servicebus">Java</a></p><p><a href="/javascript/api/overview/azure/service-bus">Node.js</a></p>
+          - title: REST
+            html: <p><a href="/rest/api/servicebus/">REST API-referens</a></p>
