--- a/articles/service-fabric/index.yml
+++ b/articles/service-fabric/index.yml
@@ -1,20 +1,14 @@
 ### YamlMime:YamlDocument
-ms.openlocfilehash: 5a7328e4d64dae4ca04f7af1bd8353951111029b
-ms.sourcegitcommit: ba4570d778187a975645a45920d1d631139ac36e
-ms.translationtype: HT
-ms.contentlocale: sv-SE
-ms.lasthandoff: 11/08/2018
-ms.locfileid: "51282109"
 documentType: LandingData
 title: Dokumentation om Azure Service Fabric
 metadata:
-  title: Dokumentation om Azure Service Fabric – Självstudier, API-referens | Microsoft Docs
-  meta.description: Learn how to use Service Fabric middleware platform to package and deploy microservices for cloud-scale applications. Tutorials, API references, and code samples.
+  title: 'Dokumentation om Azure Service Fabric – Självstudier, API-referens | Microsoft Docs'
+  meta.description: 'Learn how to use Service Fabric middleware platform to package and deploy microservices for cloud-scale applications. Tutorials, API references, and code samples.'
   services: service-fabric
-  author: 
+  author: null
   manager: carolz
   layout: LandingPage
-  ms.assetid: 
+  ms.assetid: null
   ms.service: service-fabric
   ms.tgt_pltfrm: na
   ms.devlang: na
@@ -22,81 +16,81 @@ metadata:
   ms.date: 11/03/2017
   ms.author: carolz
 abstract:
-  description: Azure Service Fabric är en distribuerad systemplattform som gör det enkelt att paketera, distribuera och hantera skalbara och tillförlitliga mikrotjänster och containrar. Utvecklare och administratörer kan undvika komplexa infrastrukturproblem och fokusera på att implementera verksamhetskritiska, krävande arbetsbelastningar som är skalbara, tillförlitliga och hanterbara. Lär dig hur du använder Azure Service Fabric med hjälp av våra snabbstarter, självstudier och exempel.
+  description: 'Azure Service Fabric är en distribuerad systemplattform som gör det enkelt att paketera, distribuera och hantera skalbara och tillförlitliga mikrotjänster och containrar. Utvecklare och administratörer kan undvika komplexa infrastrukturproblem och fokusera på att implementera verksamhetskritiska, krävande arbetsbelastningar som är skalbara, tillförlitliga och hanterbara. Lär dig hur du använder Azure Service Fabric med hjälp av våra snabbstarter, självstudier och exempel.'
 sections:
-- title: Snabbstarter på 5 minuter
-  items:
-  - type: paragraph
-    text: 'Lär dig distribuera ditt första Service Fabric-program till molnet:'
-  - type: list
-    style: icon48
+  - title: Snabbstarter på 5 minuter
     items:
-    - image:
-        src: https://docs.microsoft.com/media/logos/logo_net.svg
-      text: .NET
-      href: service-fabric-quickstart-dotnet
-    - image:
-        src: https://docs.microsoft.com/media/logos/logo_Java.svg
-      text: Java (Reliable Services)
-      href: service-fabric-quickstart-java-reliable-services
-    - image:
-        src: https://docs.microsoft.com/media/logos/logo_Java.svg
-      text: Java (Spring Boot)
-      href: service-fabric-quickstart-java-spring-boot
-    - image:
-        src: https://docs.microsoft.com/media/logos/logo_linux.svg
-      text: Linux-containrar
-      href: service-fabric-quickstart-containers-linux
-    - image:
-        src: https://docs.microsoft.com/media/logos/logo_Windows.svg
-      text: Windows-containrar
-      href: service-fabric-quickstart-containers
-- title: Steg för steg-självstudier
-  items:
-  - type: paragraph
-    text: Lär dig att distribuera, hantera och övervaka säkra webbappar på Azure
-  - type: list
-    style: unordered
+      - type: paragraph
+        text: 'Lär dig distribuera ditt första Service Fabric-program till molnet:'
+      - type: list
+        style: icon48
+        items:
+          - image:
+              src: 'https://docs.microsoft.com/media/logos/logo_net.svg'
+            text: .NET
+            href: service-fabric-quickstart-dotnet
+          - image:
+              src: 'https://docs.microsoft.com/media/logos/logo_Java.svg'
+            text: Java (Reliable Services)
+            href: service-fabric-quickstart-java-reliable-services
+          - image:
+              src: 'https://docs.microsoft.com/media/logos/logo_Java.svg'
+            text: Java (Spring Boot)
+            href: service-fabric-quickstart-java-spring-boot
+          - image:
+              src: 'https://docs.microsoft.com/media/logos/logo_linux.svg'
+            text: Linux-containrar
+            href: service-fabric-quickstart-containers-linux
+          - image:
+              src: 'https://docs.microsoft.com/media/logos/logo_Windows.svg'
+            text: Windows-containrar
+            href: service-fabric-quickstart-containers
+  - title: Steg för steg-självstudier
     items:
-    - html: <a href="service-fabric-tutorial-create-dotnet-app">Distribuera ett .NET-program</a>
-    - html: <a href="service-fabric-tutorial-create-java-app">Distribuera ett Java-program</a>
-    - html: <a href="service-fabric-host-app-in-a-container">Använd ett befintligt .NET-program i containrar</a>
-    - html: <a href="service-fabric-tutorial-create-container-images">Skapa ett program för Linux-container</a>
-    - html: Skapa och hantera ett <a href="service-fabric-tutorial-create-vnet-and-windows-cluster">Windows-</a> eller <a href="service-fabric-tutorial-create-vnet-and-linux-cluster">Linux</a>-kluster
-- title: Begrepp
-  items:
-  - type: list
-    style: unordered
+      - type: paragraph
+        text: 'Lär dig att distribuera, hantera och övervaka säkra webbappar på Azure'
+      - type: list
+        style: unordered
+        items:
+          - html: <a href="service-fabric-tutorial-create-dotnet-app">Distribuera ett .NET-program</a>
+          - html: <a href="service-fabric-tutorial-create-java-app">Distribuera ett Java-program</a>
+          - html: <a href="service-fabric-host-app-in-a-container">Använd ett befintligt .NET-program i containrar</a>
+          - html: <a href="service-fabric-tutorial-create-container-images">Skapa ett program för Linux-container</a>
+          - html: Skapa och hantera ett <a href="service-fabric-tutorial-create-vnet-and-windows-cluster">Windows-</a> eller <a href="service-fabric-tutorial-create-vnet-and-linux-cluster">Linux</a>-kluster
+  - title: Begrepp
     items:
-    - html: <a href="service-fabric-overview-microservices">Förstå mikrotjänster</a>
-    - html: <a href="service-fabric-content-roadmap">Helhetsbild</a>
-    - html: <a href="service-fabric-application-scenarios">Programscenarier</a>
-    - html: <a href="service-fabric-technical-overview">Terminologi</a>
-    - html: <a href="service-fabric-choose-framework">Bygga program – översikt</a>
-    - html: <a href="service-fabric-deploy-anywhere">Översikt över kluster</a>
-- title: Exempel
-  items:
-  - type: paragraph
-    text: 'Hitta skript för vanliga hanteringsuppgifter:'
-  - type: list
-    style: cards
-    className: cardsD
+      - type: list
+        style: unordered
+        items:
+          - html: <a href="service-fabric-overview-microservices">Förstå mikrotjänster</a>
+          - html: <a href="service-fabric-content-roadmap">Helhetsbild</a>
+          - html: <a href="service-fabric-application-scenarios">Programscenarier</a>
+          - html: <a href="service-fabric-technical-overview">Terminologi</a>
+          - html: <a href="service-fabric-choose-framework">Bygga program – översikt</a>
+          - html: <a href="service-fabric-deploy-anywhere">Översikt över kluster</a>
+  - title: Exempel
     items:
-    - title: Exempel
-      html: <p><a href="service-fabric-powershell-samples">Azure PowerShell</a></p><p><a href="samples-cli">Service Fabric CLI</a></p>
-    - title: .NET
-      html: <p><a href="https://azure.microsoft.com/resources/samples/service-fabric-dotnet-getting-started/">Komma igång</a></p><p><a href="https://github.com/Azure-Samples/service-fabric-dotnet-quickstart">Röstning</a></p><p><a href="https://azure.microsoft.com/resources/samples/service-fabric-dotnet-web-reference-app/">Webbreferens</a></p><p><a href="https://azure.microsoft.com/resources/samples/service-fabric-dotnet-iot/">IoT</a></p><p><a href="https://azure.microsoft.com/resources/samples/service-fabric-watchdog-service/">Watchdog</a></p>
-    - title: Java
-      html: <p><a href="https://azure.microsoft.com/resources/samples/service-fabric-java-getting-started/">Komma igång</a></p>
-- title: Referens
-  items:
-  - type: list
-    style: cards
-    className: cardsD
+      - type: paragraph
+        text: 'Hitta skript för vanliga hanteringsuppgifter:'
+      - type: list
+        style: cards
+        className: cardsD
+        items:
+          - title: Exempel
+            html: <p><a href="service-fabric-powershell-samples">Azure PowerShell</a></p><p><a href="samples-cli">Service Fabric CLI</a></p>
+          - title: .NET
+            html: '<p><a href="https://azure.microsoft.com/resources/samples/service-fabric-dotnet-getting-started/">Komma igång</a></p><p><a href="https://github.com/Azure-Samples/service-fabric-dotnet-quickstart">Röstning</a></p><p><a href="https://azure.microsoft.com/resources/samples/service-fabric-dotnet-web-reference-app/">Webbreferens</a></p><p><a href="https://azure.microsoft.com/resources/samples/service-fabric-dotnet-iot/">IoT</a></p><p><a href="https://azure.microsoft.com/resources/samples/service-fabric-watchdog-service/">Watchdog</a></p>'
+          - title: Java
+            html: '<p><a href="https://azure.microsoft.com/resources/samples/service-fabric-java-getting-started/">Komma igång</a></p>'
+  - title: Referens
     items:
-    - title: Kommandorad
-      html: <p><a href="/cli/azure/sf">Azure CLI</a></p><p><a href="https://docs.microsoft.com/azure/service-fabric/service-fabric-sfctl">Service Fabric CLI</a></p><p><a href="/powershell/module/azurerm.servicefabric">Azure PowerShell</a></p><p><a href="/powershell/module/servicefabric/?view=azureservicefabricps">PowerShell</a></p>
-    - title: Språk
-      html: <p><a href="/java/api/overview/azure/servicefabric">Java-API</a></p><p><a href="/dotnet/api/overview/azure/service-fabric?view=azure-dotnet">NET</a></p><p><a href="/azure/service-fabric/service-fabric-service-model-schema">XML-schema för tjänstmodell</a></p>
-    - title: REST
-      html: <p><a href="/rest/api/servicefabric">REST API-referens</a></p>
+      - type: list
+        style: cards
+        className: cardsD
+        items:
+          - title: Kommandorad
+            html: '<p><a href="/cli/azure/sf">Azure CLI</a></p><p><a href="https://docs.microsoft.com/azure/service-fabric/service-fabric-sfctl">Service Fabric CLI</a></p><p><a href="/powershell/module/az.servicefabric">Azure PowerShell</a></p><p><a href="/powershell/module/servicefabric/?view=azureservicefabricps">PowerShell</a></p>'
+          - title: Språk
+            html: <p><a href="/java/api/overview/azure/servicefabric">Java-API</a></p><p><a href="/dotnet/api/overview/azure/service-fabric?view=azure-dotnet">NET</a></p><p><a href="/azure/service-fabric/service-fabric-service-model-schema">XML-schema för tjänstmodell</a></p>
+          - title: REST
+            html: <p><a href="/rest/api/servicefabric">REST API-referens</a></p>
