--- a/articles/traffic-manager/index.yml
+++ b/articles/traffic-manager/index.yml
@@ -1,16 +1,10 @@
 ### YamlMime:YamlDocument
-ms.openlocfilehash: b03a95c4a603ecf59aaaa8c831842117425ebf0a
-ms.sourcegitcommit: f0f21b9b6f2b820bd3736f4ec5c04b65bdbf4236
-ms.translationtype: HT
-ms.contentlocale: sv-SE
-ms.lasthandoff: 03/26/2019
-ms.locfileid: "58448461"
 documentType: LandingData
 title: Traffic Manager
 metadata:
-  document_id: 
+  document_id: null
   title: Traffic Manager
-  meta.description: Learn how to use Traffic Manager to route incoming traffic for optimal application performance and reliability. Quickstarts, tutorials, samples, and more, show how to manage traffic to Azure or external service endpoints.
+  meta.description: 'Learn how to use Traffic Manager to route incoming traffic for optimal application performance and reliability. Quickstarts, tutorials, samples, and more, show how to manage traffic to Azure or external service endpoints.'
   services: traffic-manager
   author: KumudD
   manager: twooley
@@ -22,76 +16,76 @@ metadata:
   ms.date: 02/28/2019
   ms.author: kumud
 abstract:
-  description: Lär dig hur du använder Azure Traffic Manager. Snabbstarter, självstudier och exempel med mera visar dig hur du hanterar inkommande trafik för optimal programprestanda och hur du distribuerar trafik till Azure eller externa tjänstslutpunkter.
+  description: 'Lär dig hur du använder Azure Traffic Manager. Snabbstarter, självstudier och exempel med mera visar dig hur du hanterar inkommande trafik för optimal programprestanda och hur du distribuerar trafik till Azure eller externa tjänstslutpunkter.'
 sections:
-- title: Snabbstarter på 5 minuter
-  items:
-  - type: paragraph
-    text: Lär dig hur du hanterar webbtrafik till dina tjänstslutpunkter med Traffic Manager.
-  - type: list
-    style: icon48
+  - title: Snabbstarter på 5 minuter
     items:
-    - image:
-        src: https://docs.microsoft.com/media/common/i_portal.svg
-      text: Azure Portal
-      href: /azure/traffic-manager/quickstart-create-traffic-manager-profile
-    - image:
-        src: https://docs.microsoft.com/media/logos/logo_powershell.svg
-      text: Azure PowerShell
-      href: /azure/traffic-manager/quickstart-create-traffic-manager-profile-powershell
-- title: Steg för steg-självstudier
-  items:
-  - type: paragraph
-    text: Lär dig mer om att dirigera trafik utifrån olika routningsmetoder som är tillgängliga i Traffic Manager.
-  - type: list
-    style: unordered
+      - type: paragraph
+        text: Lär dig hur du hanterar webbtrafik till dina tjänstslutpunkter med Traffic Manager.
+      - type: list
+        style: icon48
+        items:
+          - image:
+              src: 'https://docs.microsoft.com/media/common/i_portal.svg'
+            text: Azure Portal
+            href: /azure/traffic-manager/quickstart-create-traffic-manager-profile
+          - image:
+              src: 'https://docs.microsoft.com/media/logos/logo_powershell.svg'
+            text: Azure PowerShell
+            href: /azure/traffic-manager/quickstart-create-traffic-manager-profile-powershell
+  - title: Steg för steg-självstudier
     items:
-    - html: <a href="/azure/traffic-manager/traffic-manager-configure-geographic-routing-method">Dirigera trafik utifrån slutpunktens geografiska plats</a>
-    - html: <a href="/azure/traffic-manager/tutorial-traffic-manager-improve-website-response">Dirigera trafik för låg latens</a>
-    - html: <a href="/azure/traffic-manager/traffic-manager-configure-weighted-routing-method">Distribuera trafik till en uppsättning slutpunkter</a>
-    - html: <a href="/azure/traffic-manager/traffic-manager-configure-priority-routing-method">Dirigera trafik till en slutpunkt för prioritet</a>
-    - html: <a href="/azure/traffic-manager/tutorial-traffic-manager-weighted-endpoint-routing">Styra trafiken med viktade slutpunkter</a>
-    - html: <a href="/azure/traffic-manager/tutorial-traffic-manager-subnet-routing">Dirigera trafik utifrån användarens undernät</a>
-- title: Kostnadsfri videoutbildning för Pluralsight
-  items:
-  - type: list
-    style: cards
-    className: cardsFTitle
+      - type: paragraph
+        text: Lär dig mer om att dirigera trafik utifrån olika routningsmetoder som är tillgängliga i Traffic Manager.
+      - type: list
+        style: unordered
+        items:
+          - html: <a href="/azure/traffic-manager/traffic-manager-configure-geographic-routing-method">Dirigera trafik utifrån slutpunktens geografiska plats</a>
+          - html: <a href="/azure/traffic-manager/tutorial-traffic-manager-improve-website-response">Dirigera trafik för låg latens</a>
+          - html: <a href="/azure/traffic-manager/traffic-manager-configure-weighted-routing-method">Distribuera trafik till en uppsättning slutpunkter</a>
+          - html: <a href="/azure/traffic-manager/traffic-manager-configure-priority-routing-method">Dirigera trafik till en slutpunkt för prioritet</a>
+          - html: <a href="/azure/traffic-manager/tutorial-traffic-manager-weighted-endpoint-routing">Styra trafiken med viktade slutpunkter</a>
+          - html: <a href="/azure/traffic-manager/tutorial-traffic-manager-subnet-routing">Dirigera trafik utifrån användarens undernät</a>
+  - title: Kostnadsfri videoutbildning för Pluralsight
     items:
-    - title: Azure-administratör
-      href: https://go.microsoft.com/fwlink/?linkid=2012827
-      image:
-        src: https://docs.microsoft.com/media/logos/logo_pluralsight.svg
-        href: https://go.microsoft.com/fwlink/?linkid=2012827
-    - title: Azure-lösningsarkitekt
-      href: https://go.microsoft.com/fwlink/?linkid=2012824
-      image:
-        src: https://docs.microsoft.com/media/logos/logo_pluralsight.svg
-        href: https://go.microsoft.com/fwlink/?linkid=2012824
-    - title: Azure-administration för AWS-administratörer
-      href: https://app.pluralsight.com/library/courses/azure-administration-aws-administrators/table-of-contents
-      image:
-        src: https://docs.microsoft.com/media/logos/logo_pluralsight.svg
-        href: https://app.pluralsight.com/library/courses/azure-administration-aws-administrators/table-of-contents
-- title: Exempel
-  items:
-  - type: paragraph
-    text: Skriptexempel för vanliga åtgärder.
-  - type: list
-    style: unordered
-    className: spaced noBullet
+      - type: list
+        style: cards
+        className: cardsFTitle
+        items:
+          - title: Azure-administratör
+            href: 'https://go.microsoft.com/fwlink/?linkid=2012827'
+            image:
+              src: 'https://docs.microsoft.com/media/logos/logo_pluralsight.svg'
+              href: 'https://go.microsoft.com/fwlink/?linkid=2012827'
+          - title: Azure-lösningsarkitekt
+            href: 'https://go.microsoft.com/fwlink/?linkid=2012824'
+            image:
+              src: 'https://docs.microsoft.com/media/logos/logo_pluralsight.svg'
+              href: 'https://go.microsoft.com/fwlink/?linkid=2012824'
+          - title: Azure-administration för AWS-administratörer
+            href: 'https://app.pluralsight.com/library/courses/azure-administration-aws-administrators/table-of-contents'
+            image:
+              src: 'https://docs.microsoft.com/media/logos/logo_pluralsight.svg'
+              href: 'https://app.pluralsight.com/library/courses/azure-administration-aws-administrators/table-of-contents'
+  - title: Exempel
     items:
-    - html: <a href="/azure/traffic-manager/cli-samples">Azure CLI</a>
-    - html: <a href="/azure/traffic-manager/powershell-samples">PowerShell</a>
-- title: Referens
-  items:
-  - type: list
-    style: cards
-    className: cardsD
+      - type: paragraph
+        text: Skriptexempel för vanliga åtgärder.
+      - type: list
+        style: unordered
+        className: spaced noBullet
+        items:
+          - html: <a href="/azure/traffic-manager/cli-samples">Azure CLI</a>
+          - html: <a href="/azure/traffic-manager/powershell-samples">PowerShell</a>
+  - title: Referens
     items:
-    - title: Kommandorad
-      html: <p><a href="https://docs.microsoft.com/powershell/module/azurerm.trafficmanager/#traffic_manager">PowerShell</a></p><p><a href="/cli/azure/network/traffic-manager">Azure CLI</a></p>
-    - title: Språk
-      html: <p><a href="https://docs.microsoft.com/dotnet/api/overview/azure/virtual-network?view=azure-dotnet">NET</a></p><p><a href="/java/api/com.microsoft.azure.management.trafficmanager">Java</a></p><p><a href="https://azure.github.io/azure-sdk-for-node/azure-arm-trafficmanager/latest/">Node.js</a></p><p><a href="https://docs.microsoft.com/python/api/overview/azure/traffic-manager">Python</a></p>
-    - title: REST
-      html: <p><a href="/rest/api/trafficmanager/">REST API-referens</a></p>
+      - type: list
+        style: cards
+        className: cardsD
+        items:
+          - title: Kommandorad
+            html: '<p><a href="https://docs.microsoft.com/powershell/module/az.trafficmanager/#traffic_manager">PowerShell</a></p><p><a href="/cli/azure/network/traffic-manager">Azure CLI</a></p>'
+          - title: Språk
+            html: '<p><a href="https://docs.microsoft.com/dotnet/api/overview/azure/virtual-network?view=azure-dotnet">NET</a></p><p><a href="/java/api/com.microsoft.azure.management.trafficmanager">Java</a></p><p><a href="https://azure.github.io/azure-sdk-for-node/azure-arm-trafficmanager/latest/">Node.js</a></p><p><a href="https://docs.microsoft.com/python/api/overview/azure/traffic-manager">Python</a></p>'
+          - title: REST
+            html: <p><a href="/rest/api/trafficmanager/">REST API-referens</a></p>
