--- a/articles/vpn-gateway/index.yml
+++ b/articles/vpn-gateway/index.yml
@@ -1,16 +1,10 @@
 ### YamlMime:YamlDocument
-ms.openlocfilehash: 881c0c5f6741c661f3c36cdf2efe1b113574089e
-ms.sourcegitcommit: 63613e4c7edf1b1875a2974a29ab2a8ce5d90e3b
-ms.translationtype: HT
-ms.contentlocale: sv-SE
-ms.lasthandoff: 08/29/2018
-ms.locfileid: "43185915"
 documentType: LandingData
 title: Dokumentation om Azure VPN Gateway
 metadata:
-  document_id: 
-  title: Dokumentation om VPN Gateway – självstudier, API-referenser | Microsoft Docs
-  meta.description: Learn how to configure, create, and manage an Azure VPN gateway. Create encrypted cross-premises connections to your virtual network from on-premises locations, or create encrypted connections between VNets.
+  document_id: null
+  title: 'Dokumentation om VPN Gateway – självstudier, API-referenser | Microsoft Docs'
+  meta.description: 'Learn how to configure, create, and manage an Azure VPN gateway. Create encrypted cross-premises connections to your virtual network from on-premises locations, or create encrypted connections between VNets.'
   services: vpn-gateway
   author: cherylmc
   manager: jeconnoc
@@ -21,51 +15,51 @@ metadata:
   ms.date: 04/26/2018
   ms.author: cherylmc
 abstract:
-  description: Lär dig hur du konfigurerar, skapar och hanterar Azure VPN Gateway. Skapa krypterade anslutningar mellan olika platser till det virtuella nätverket från lokala platser, eller skapa krypterade anslutningar mellan virtuella nätverk.
+  description: 'Lär dig hur du konfigurerar, skapar och hanterar Azure VPN Gateway. Skapa krypterade anslutningar mellan olika platser till det virtuella nätverket från lokala platser, eller skapa krypterade anslutningar mellan virtuella nätverk.'
 sections:
-- title: Steg för steg-självstudier
-  items:
-  - type: paragraph
-    text: Lär dig hur du skapar, konfigurerar och hanterar Azure VPN Gateway.
-  - type: list
-    style: unordered
-    className: spaced noBullet
+  - title: Steg för steg-självstudier
     items:
-    - html: <a href="/azure/vpn-gateway/vpn-gateway-tutorial-create-gateway-powershell">Skapa och hantera VPN Gateway</a>
-- title: Kostnadsfri videoutbildning för Pluralsight
-  items:
-  - type: list
-    style: cards
-    className: cardsFTitle
+      - type: paragraph
+        text: 'Lär dig hur du skapar, konfigurerar och hanterar Azure VPN Gateway.'
+      - type: list
+        style: unordered
+        className: spaced noBullet
+        items:
+          - html: <a href="/azure/vpn-gateway/vpn-gateway-tutorial-create-gateway-powershell">Skapa och hantera VPN Gateway</a>
+  - title: Kostnadsfri videoutbildning för Pluralsight
     items:
-    - title: Azure-administratör
-      href: https://go.microsoft.com/fwlink/?linkid=2012827
-      image:
-        src: https://docs.microsoft.com/media/logos/logo_pluralsight.svg
-        href: https://go.microsoft.com/fwlink/?linkid=2012827
-    - title: Azure-lösningsarkitekt
-      href: https://go.microsoft.com/fwlink/?linkid=2012824
-      image:
-        src: https://docs.microsoft.com/media/logos/logo_pluralsight.svg
-        href: https://go.microsoft.com/fwlink/?linkid=2012824
-- title: Exempel
-  items:
-  - type: paragraph
-    text: Skriptexempel för vanliga åtgärder.
-  - type: list
-    style: unordered
-    className: spaced noBullet
+      - type: list
+        style: cards
+        className: cardsFTitle
+        items:
+          - title: Azure-administratör
+            href: 'https://go.microsoft.com/fwlink/?linkid=2012827'
+            image:
+              src: 'https://docs.microsoft.com/media/logos/logo_pluralsight.svg'
+              href: 'https://go.microsoft.com/fwlink/?linkid=2012827'
+          - title: Azure-lösningsarkitekt
+            href: 'https://go.microsoft.com/fwlink/?linkid=2012824'
+            image:
+              src: 'https://docs.microsoft.com/media/logos/logo_pluralsight.svg'
+              href: 'https://go.microsoft.com/fwlink/?linkid=2012824'
+  - title: Exempel
     items:
-    - html: <a href="/azure/vpn-gateway/powershell-samples">PowerShell</a>
-- title: Referens
-  items:
-  - type: list
-    style: cards
-    className: cardsD
+      - type: paragraph
+        text: Skriptexempel för vanliga åtgärder.
+      - type: list
+        style: unordered
+        className: spaced noBullet
+        items:
+          - html: <a href="/azure/vpn-gateway/powershell-samples">PowerShell</a>
+  - title: Referens
     items:
-    - title: Kommandorad
-      html: <p><a href="/powershell/module/azurerm.network#vpn">PowerShell</a></p><p><a href="/cli/azure/network/vnet-gateway">Azure CLI</a></p>
-    - title: Språk
-      html: <p><a href="/dotnet/api/overview/azure/virtual-network">.NET</a></p><p><a href="/java/api/overview/azure/network">Java</a></p><p><a href="/javascript/api/overview/azure/virtual-network">Node.js</a></p><p><a href="/python/api/overview/azure/network">Python</a></p>
-    - title: REST
-      html: <p><a href="/rest/api/network-gateway/">REST API-referens</a></p>
+      - type: list
+        style: cards
+        className: cardsD
+        items:
+          - title: Kommandorad
+            html: '<p><a href="/powershell/module/az.network#vpn">PowerShell</a></p><p><a href="/cli/azure/network/vnet-gateway">Azure CLI</a></p>'
+          - title: Språk
+            html: <p><a href="/dotnet/api/overview/azure/virtual-network">NET</a></p><p><a href="/java/api/overview/azure/network">Java</a></p><p><a href="/javascript/api/overview/azure/virtual-network">Node.js</a></p><p><a href="/python/api/overview/azure/network">Python</a></p>
+          - title: REST
+            html: <p><a href="/rest/api/network-gateway/">REST API-referens</a></p>
